--- a/blocks/profile/__info-title-container/profile__info-title-container.css
+++ b/blocks/profile/__info-title-container/profile__info-title-container.css
@@ -1,5 +1,4 @@
 .profile__info-title-container {
   display: flex;
   align-items: baseline;
-  position: relative;
 }
