--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   max-width: 80%;
+  position: relative;
 }
 @media screen and (max-width: 678px) {
   .profile__info {
