--- a/blocks/profile/__status/profile__status.css
+++ b/blocks/profile/__status/profile__status.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 678px) {
   .profile__status {
-    max-width: 282px;
+    max-width: 230px;
     font-size: 14px;
     line-height: 17px;
     padding-top: 8px;
