--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -18,6 +18,6 @@
 }
 @media screen and (max-width: 321px) {
   .profile__title {
-    max-width: 282px;
+    max-width: 230px;
   }
 }
